--- a/CS_stu_Midterm_exam/MainWindow.xaml
+++ b/CS_stu_Midterm_exam/MainWindow.xaml
@@ -9,8 +9,8 @@
     <StackPanel x:Name="Stack" Background="Black">
         <Menu Height="19">
             <MenuItem Header="檔案">
-                <MenuItem Header="開新檔案" Height="16"/>
-                <MenuItem Header="開新視窗" Height="16"/>
+                <MenuItem Header="開新檔案" Height="16" Click="New_File_Click"/>
+                <MenuItem Header="開新視窗" Height="16" Click="New_windows_Click"/>
                 <MenuItem Header="開啟舊檔" Height="16" Click="Loading_Click"/>
                 <MenuItem Header="儲存檔案" Height="16" Click="Save_Click"/>
                 <MenuItem Header="另存為...." Height="16" Click="Other_Save_Click"/>
@@ -18,15 +18,15 @@
                 <MenuItem Header="版面設定" Height="16"/>
                 <MenuItem Header="列印" Height="16"/>
                 <Separator Height="1" Margin="0,0,0,0"/>
-                <MenuItem Header="結束" Height="16"/>
+                <MenuItem Header="結束" Height="16" Click="Exit_Click"/>
             </MenuItem>
-            <MenuItem Header="編輯">
-                <MenuItem Header="復原" Height="16"/>
+            <MenuItem Header="編輯" MouseEnter="Edit_Item_Refresh">
+                <MenuItem x:Name="undo_item" Header="復原" Height="16" Click="Undo_Click"/>
                 <Separator Height="1" Margin="0,0,0,0"/>
-                <MenuItem Header="剪下" Height="16"/>
-                <MenuItem Header="複製" Height="16"/>
-                <MenuItem Header="貼上" Height="16"/>
-                <MenuItem Header="刪除" Height="16"/>
+                <MenuItem x:Name="Cut_item" Header="剪下" Height="16" Click="cut_Click" />
+                <MenuItem x:Name="Copy_item" Header="複製" Height="16" Click="copy_Click" />
+                <MenuItem x:Name="Paste_item" Header="貼上" Height="16" Click="Paste_Click"/>
+                <MenuItem x:Name="Remove_item" Header="刪除" Height="16" Click="Remove_Click"/>
                 <Separator Height="1" Margin="0,0,0,0"/>
                 <MenuItem Header="使用Google搜尋...." Height="16"/>
                 <MenuItem Header="尋找...." Height="16"/>
@@ -35,11 +35,11 @@
                 <MenuItem Header="取代" Height="16"/>
                 <MenuItem Header="移至" Height="16"/>
                 <Separator Height="1" Margin="0,0,0,0"/>
-                <MenuItem Header="全選" Height="16"/>
-                <MenuItem Header="時間/日期" Height="16"/>
+                <MenuItem Header="全選" Height="16" Click="Select_all_Click"/>
+                <MenuItem Header="時間/日期" Height="16" Click="add_time"/>
             </MenuItem>
             <MenuItem Header="格式">
-                <MenuItem Header="自動換行" Height="16"/>
+                <MenuItem x:Name="Auto_return_item" Header="自動換行" Height="16" IsChecked="True" Click="Auto_return_item_Click" />
                 <MenuItem Header="字型..." Height="16"/>
             </MenuItem>
             <MenuItem Header="檢視">
@@ -57,7 +57,7 @@
                 <MenuItem Header="關於記事本" Height="16"/>
             </MenuItem>
         </Menu>
-        <TextBox x:Name="Text_in" Background="#FFB9B9B9" Height="375" AcceptsReturn="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" FontSize="18" />
+        <TextBox x:Name="Text_in" Background="#FFB9B9B9" Height="375" TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" FontSize="18" KeyDown="Text_in_KeyDown" />
 
         <StatusBar Margin="0,0,0,0" Height="31" Background="#FFCB6E6E"/>
     </StackPanel>
